<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/dp_10"
    android:layout_marginVertical="@dimen/dp_5"
    android:foreground="?selectableItemBackground"
    app:cardBackgroundColor="@color/color_background_normal"
    app:cardCornerRadius="@dimen/dp_8"
    app:cardElevation="@dimen/dp_6"
    tools:context=".common.holder.ImageCardHolder">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!-- 512*384 -> 256*192 -> 128*96  -> 192*144  -> 144*108-->
        <ImageView
            android:id="@+id/song_image"
            android:layout_width="@dimen/dp_144"
            android:layout_height="@dimen/dp_108"
            android:background="@color/color_background_card"
            app:layout_constraintBottom_toBottomOf="@+id/layout_container"
            app:layout_constraintLeft_toLeftOf="@+id/layout_container"
            app:layout_constraintTop_toTopOf="@+id/layout_container" />

        <TextView
            android:id="@+id/song_name"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:paddingLeft="@dimen/dp_5"
            android:text="@string/item_card_song_name"
            android:textSize="@dimen/sp_12"
            android:layout_marginLeft="@dimen/dp_5"
            app:layout_constraintBottom_toTopOf="@+id/song_difficulty"
            app:layout_constraintLeft_toRightOf="@id/song_image"
            app:layout_constraintRight_toRightOf="@+id/layout_container"
            app:layout_constraintTop_toTopOf="@+id/song_image"

            />

        <TextView
            android:id="@+id/song_difficulty"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_5"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:paddingLeft="@dimen/dp_5"
            android:text="@string/item_card_song_difficulty"
            android:textSize="@dimen/sp_12"
            android:layout_marginLeft="@dimen/dp_5"
            app:layout_constraintBottom_toTopOf="@+id/song_description"
            app:layout_constraintLeft_toRightOf="@id/song_image"
            app:layout_constraintRight_toRightOf="@+id/layout_container"
            app:layout_constraintTop_toBottomOf="@+id/song_name" />

        <TextView
            android:id="@+id/song_description"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_5"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:maxLines="3"
            android:paddingLeft="@dimen/dp_5"
            android:text="@string/item_card_song_description"
            android:textSize="@dimen/sp_12"
            android:layout_marginLeft="@dimen/dp_5"
            app:layout_constraintBottom_toBottomOf="@+id/song_image"
            app:layout_constraintLeft_toRightOf="@id/song_image"
            app:layout_constraintRight_toRightOf="@+id/layout_container"
            app:layout_constraintTop_toBottomOf="@+id/song_difficulty" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>